--- a/public/articles.html
+++ b/public/articles.html
@@ -22,9 +22,9 @@
       to avoid connecting the SDK to running emulators.
     -->
     <script defer src="/__/firebase/init.js?useEmulator=true"></script>
-    <script defer src="fromfirestore.js"></script>
-    <script defer src="dom.js"></script>
+    <script defer src="fromfirestoreArticles.js"></script>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="articles.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet">
 
@@ -48,3 +48,17 @@
         <a href="signin.html"><button class="signin">Sign In</button></a>
     </div>
   </header>
+
+  <div class="container">
+    <div class="game">
+
+<ul class="articlelist">
+
+</ul>
+
+
+    </div>
+</div>
+
+</body>
+</html>
