--- a/public/index.html
+++ b/public/index.html
@@ -36,9 +36,9 @@
        <a href="/"> <h1>Headline Guesser</h1></a>
         <ul>
           <li><a href="rank.html" class="ranks"><span class="material-icons">leaderboard</span></a></li>
-          <li><a href="" class="settings"><span class="material-icons">settings</span></a></li>
+          <!-- <li><a href="" class="settings"><span class="material-icons">settings</span></a></li>
           <li><a href="" class="profile"><span class="material-icons">emoji_events</span></a></li>
-          <li><a href="" class="info"><span class="material-icons">info</span></a></li>
+          <li><a href="" class="info"><span class="material-icons">info</span></a></li> -->
           <li><a href="#" class="personlink"><span class="material-icons person">person</span></a></li>
         </ul>
       </nav>
@@ -50,9 +50,6 @@
     </header>
     <div class="container">
       <div class="game">
-          <!-- <div class="circ"></div> -->
-          <!-- <div class="rect"></div> -->
-          <!-- <img class="paper" src="/images/circpaper.svg" alt="paper" srcset=""> -->
 
           <svg id='paper' class='paper' preserveAspectRatio="none" viewBox="0 0 590 619" fill="none" xmlns="http://www.w3.org/2000/svg">
               <rect y="99" width="590" height="520" rx="36" fill="#529ADC"/>
@@ -86,17 +83,19 @@
               <button class="btn btn1"><img class="btnimg mailimg" src="/images/letter-m.svg" alt="mail"></button>
               <button class="btn btn2"><img class='btnimg guardimg' src="/images/google.svg" alt="guardian"></button>
            </div>
-          <div class="kd"><span>Accuracy:</span><div class="acc"></span></div>
+          <div class="kd"><span>Accuracy:</span><div class="acc"></span></div>      </div>
+          
+          <!-- The style of buttons
+             <span class="material-icons flyer plusone">plus_one</span>
+          <span class="material-icons flyer negone">exposure_neg_1</span> -->
 
-          <span class="material-icons flyer plusone">plus_one</span>
-          <span class="material-icons flyer negone">exposure_neg_1</span>
 
-      </div>
+          <div class="added"><p class="artadd">Article saved</p></div>
+
+
       <!-- game -->
 
       </div>
-      <!-- container -->
-    <!-- <p id="load">Firebase SDK Loading&hellip;</p> -->
 
    
 
