Nearly finished MVP

--- a/public/articles.html
+++ b/public/articles.html
@@ -30,27 +30,32 @@
 
 
   </head>
-
-  <header>
-    <nav>
-      <h1>Headline Guesser</h1>
-      <ul>
-        <li><a href="rank.html" class="ranks"><span class="material-icons">leaderboard</span></a></li>
-        <li><a href="" class="settings"><span class="material-icons">settings</span></a></li>
-        <li><a href="" class="profile"><span class="material-icons">emoji_events</span></a></li>
-        <li><a href="" class="info"><span class="material-icons">info</span></a></li>
-        <li><a href="#" class="personlink"><span class="material-icons person">person</span></a></li>
-      </ul>
-    </nav>
-    <div class="signbox">
-        <h3>Sign up to save your headlines</h3>
-        <a href="signin.html"><button class="signup">Sign Up</button></a>
-        <a href="signin.html"><button class="signin">Sign In</button></a>
-    </div>
+  <body>
+    <header>
+      <nav>
+       <a href="/"> <h1>Headline Guesser</h1></a>
+        <ul>
+          <li><a href="rank.html" class="ranks" ><span class="material-icons" style="font-size: 4vh">leaderboard</span></a></li>
+          <!-- <li><a href="" class="settings"><span class="material-icons">settings</span></a></li>
+          <li><a href="" class="profile"><span class="material-icons">emoji_events</span></a></li>
+          <li><a href="" class="info"><span class="material-icons">info</span></a></li> -->
+          <li><a href="#" class="personlink" ><span class="material-icons person"style="font-size: 4vh">person</span></a></li>
+        </ul>
+      </nav>
+      <div class="signbox">
+          <h3>Account</h3>
+          <a href="javascript:;"><button class="logout">Logout</button></a>
+          <a href="javascript:;"><button class="del">Delete account</button></a>
+      </div>
   </header>
 
   <div class="container">
     <div class="game">
+      <div class="top">
+        <div class="acccircle"><div class="acc">0</div></div>
+        <h3 class="accuracy">Accuracy</h3>
+      </div>
+      <h2 class="artheader">Saved Articles</h2>
 
 <ul class="articlelist">
 
