--- a/public/rank.html
+++ b/public/rank.html
@@ -35,6 +35,11 @@
 <div class="container">
     <div class="game">
 
+      <div class="paperbox">
+        <button class="guardbtn tnotclicked">Guardian</button>
+        <button class="mailbtn tclicked">Mail</button>
+    </div>
+
         <table id="myTable">
             <thead id="thehead">
             <tr>
