--- a/public/index.html
+++ b/public/index.html
@@ -35,11 +35,11 @@
       <nav>
        <a href="/"> <h1>Headline Guesser</h1></a>
         <ul>
-          <li><a href="rank.html" class="ranks"><span class="material-icons">leaderboard</span></a></li>
+          <li><a href="rank.html" class="ranks" ><span class="material-icons" style="font-size: 4vh">leaderboard</span></a></li>
           <!-- <li><a href="" class="settings"><span class="material-icons">settings</span></a></li>
           <li><a href="" class="profile"><span class="material-icons">emoji_events</span></a></li>
           <li><a href="" class="info"><span class="material-icons">info</span></a></li> -->
-          <li><a href="#" class="personlink"><span class="material-icons person">person</span></a></li>
+          <li><a href="javascript:;" class="personlink" ><span class="material-icons person"style="font-size: 4vh">person</span></a></li>
         </ul>
       </nav>
       <div class="signbox">
@@ -71,10 +71,10 @@
               </svg>
               
             <div class="headline">
-
+              <!-- Like Thandiwe Newton, I want to embrace my full name in all its glory -->
               <h4 class="headlinetext"> 
             <span class="textwidth">
-              Like Thandiwe Newton, I want to embrace my full name in all its glory
+
             </span></h4>
   
             </div>
@@ -83,7 +83,7 @@
               <button class="btn btn1"><img class="btnimg mailimg" src="/images/letter-m.svg" alt="mail"></button>
               <button class="btn btn2"><img class='btnimg guardimg' src="/images/google.svg" alt="guardian"></button>
            </div>
-          <div class="kd"><span>Accuracy:</span><div class="acc"></span></div>      </div>
+          <!-- <div class="kd"><span>Accuracy:</span><div class="acc"></span></div>      </div> -->
           
           <!-- The style of buttons
              <span class="material-icons flyer plusone">plus_one</span>
