Mostly finished, refactored sign up.

--- a/public/articles.html
+++ b/public/articles.html
@@ -3,20 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
+    <title>Headline Guesser|Account</title>
 
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/8.4.1/firebase-app.js"></script>
     <!-- include only the Firebase features as you need -->
     <script defer src="/__/firebase/8.4.1/firebase-auth.js"></script>
-    <script defer src="/__/firebase/8.4.1/firebase-database.js"></script>
     <script defer src="/__/firebase/8.4.1/firebase-firestore.js"></script>
     <script defer src="/__/firebase/8.4.1/firebase-functions.js"></script>
-    <script defer src="/__/firebase/8.4.1/firebase-messaging.js"></script>
-    <script defer src="/__/firebase/8.4.1/firebase-storage.js"></script>
     <script defer src="/__/firebase/8.4.1/firebase-analytics.js"></script>
-    <script defer src="/__/firebase/8.4.1/firebase-remote-config.js"></script>
-    <script defer src="/__/firebase/8.4.1/firebase-performance.js"></script>
+t>
     <!-- 
       initialize the SDK after all desired features are loaded, set useEmulator to false
       to avoid connecting the SDK to running emulators.
@@ -34,13 +30,14 @@
     <header>
       <nav>
        <a href="/"> <h1>Headline Guesser</h1></a>
-        <ul>
-          <li><a href="rank.html" class="ranks" ><span class="material-icons" style="font-size: 4vh">leaderboard</span></a></li>
-          <!-- <li><a href="" class="settings"><span class="material-icons">settings</span></a></li>
-          <li><a href="" class="profile"><span class="material-icons">emoji_events</span></a></li>
-          <li><a href="" class="info"><span class="material-icons">info</span></a></li> -->
-          <li><a href="#" class="personlink" ><span class="material-icons person"style="font-size: 4vh">person</span></a></li>
-        </ul>
+       <ul>
+        <li><a href="info.html" class="info"><span class="material-icons">info</span></a></li>
+        <li><a href="rank.html" class="ranks" ><span class="material-icons" style="font-size: 4vh">leaderboard</span></a></li>
+        <!-- <li><a href="" class="settings"><span class="material-icons">settings</span></a></li>
+        <li><a href="" class="profile"><span class="material-icons">emoji_events</span></a></li> -->
+
+        <li><a href="javascript:;" class="personlink" ><span class="material-icons person"style="font-size: 4vh">person</span></a></li>
+      </ul>
       </nav>
       <div class="signbox">
           <h3>Account</h3>
