--- a/public/index.html
+++ b/public/index.html
@@ -3,20 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
-
+    <title>Headline Guesser</title>
+    <link rel="shortcut icon" type="image" href="images/fav.svg"/>
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/8.4.1/firebase-app.js"></script>
     <!-- include only the Firebase features as you need -->
     <script defer src="/__/firebase/8.4.1/firebase-auth.js"></script>
-    <script defer src="/__/firebase/8.4.1/firebase-database.js"></script>
     <script defer src="/__/firebase/8.4.1/firebase-firestore.js"></script>
     <script defer src="/__/firebase/8.4.1/firebase-functions.js"></script>
-    <script defer src="/__/firebase/8.4.1/firebase-messaging.js"></script>
-    <script defer src="/__/firebase/8.4.1/firebase-storage.js"></script>
     <script defer src="/__/firebase/8.4.1/firebase-analytics.js"></script>
-    <script defer src="/__/firebase/8.4.1/firebase-remote-config.js"></script>
-    <script defer src="/__/firebase/8.4.1/firebase-performance.js"></script>
     <!-- 
       initialize the SDK after all desired features are loaded, set useEmulator to false
       to avoid connecting the SDK to running emulators.
@@ -24,21 +19,24 @@
     <script defer src="/__/firebase/init.js?useEmulator=true"></script>
     <script defer src="fromfirestore.js"></script>
     <script defer src="dom.js"></script>
+    <script defer src="signup.js"></script>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet">
 
-
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6547870611091183"
+    crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
       <nav>
        <a href="/"> <h1>Headline Guesser</h1></a>
         <ul>
+          <li><a href="info.html" class="info"><span class="material-icons">info</span></a></li>
           <li><a href="rank.html" class="ranks" ><span class="material-icons" style="font-size: 4vh">leaderboard</span></a></li>
           <!-- <li><a href="" class="settings"><span class="material-icons">settings</span></a></li>
-          <li><a href="" class="profile"><span class="material-icons">emoji_events</span></a></li>
-          <li><a href="" class="info"><span class="material-icons">info</span></a></li> -->
+          <li><a href="" class="profile"><span class="material-icons">emoji_events</span></a></li> -->
+
           <li><a href="javascript:;" class="personlink" ><span class="material-icons person"style="font-size: 4vh">person</span></a></li>
         </ul>
       </nav>
@@ -80,8 +78,8 @@
             </div>
           
           <div class="buttons">
-              <button class="btn btn1"><img class="btnimg mailimg" src="/images/letter-m.svg" alt="mail"></button>
-              <button class="btn btn2"><img class='btnimg guardimg' src="/images/google.svg" alt="guardian"></button>
+              <button class="btn btn1"><img class="btnimg mailimg" src="/images/m.svg" alt="mail"></button>
+              <button class="btn btn2"><img class='btnimg guardimg' src="/images/g.svg" alt="guardian"></button>
            </div>
           <!-- <div class="kd"><span>Accuracy:</span><div class="acc"></span></div>      </div> -->
           
